add: jacoco-maven-plugin; update: serializator->abstractserializer